--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 <head> 
 <title> wie kann man mit Git umgehen ? </title>
+<style type="text/css">
+h1{
+   position: absolute;
+   top: 40%;
+   width: 100%;
+   font-family:Helvetica;
+   font-size: 100;
+   text-align:center;
+}
+
+ </style>
 </head>
 <body>
 <h1> HI </h1>
