--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@ h1{
    font-size: 100;
    text-align:center;
 }
+body{
+      background-color: #2ecc71;
+      color: white;
+    }
 
  </style>
 </head>
 <body>
-<h1> Hello </h1>
+<h1> bonjour </h1>
 
 </body>
 </html>
