--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1{
    text-align:center;
 }
 body{
-      background-color: #e74c3c;
+      background-color: white;
       color: white;
     }
 
